--- a/index.html
+++ b/index.html
@@ -4,127 +4,201 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>TOWER CITY LLC | Handyman & Painting Services</title>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
+
+* { margin: 0; padding: 0; box-sizing: border-box; }
+
 body {
-    margin: 0;
-    font-family: 'Inter', sans-serif;
-    background: #f8fafc;
-    color: #1e293b;
+    font-family: 'Poppins', sans-serif;
+    background: #f4f7fb;
+    color: #1f2937;
 }
-header {
+
+nav {
+    background: white;
+    padding: 20px 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+    position: sticky;
+    top: 0;
+}
+
+nav h2 {
+    color: #1e3a8a;
+}
+
+nav a {
+    text-decoration: none;
+    color: #1f2937;
+    margin-left: 20px;
+    font-weight: 500;
+}
+
+.hero {
     background: linear-gradient(135deg, #1e3a8a, #2563eb);
     color: white;
-    padding: 80px 20px;
+    padding: 100px 20px;
     text-align: center;
 }
-header h1 {
-    font-size: 42px;
-    margin: 0;
+
+.hero h1 {
+    font-size: 44px;
+    margin-bottom: 20px;
 }
-header p {
+
+.hero p {
     font-size: 18px;
-    margin-top: 15px;
-}
-.container {
-    max-width: 1100px;
-    margin: 60px auto;
-    padding: 0 20px;
-}
-.card {
-    background: white;
-    padding: 30px;
     margin-bottom: 30px;
-    border-radius: 14px;
-    box-shadow: 0 8px 24px rgba(0,0,0,0.06);
 }
-.services {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
-}
-.service-box {
-    background: #f1f5f9;
-    padding: 20px;
-    border-radius: 10px;
-}
-button, .btn {
+
+.btn {
     display: inline-block;
-    background: #2563eb;
-    color: white;
-    padding: 14px 24px;
+    padding: 14px 28px;
     border-radius: 8px;
     text-decoration: none;
     font-weight: 600;
-    margin-top: 15px;
+    margin: 10px;
 }
+
+.btn-primary {
+    background: white;
+    color: #1e3a8a;
+}
+
+.btn-secondary {
+    background: #111827;
+    color: white;
+}
+
+.container {
+    max-width: 1100px;
+    margin: 70px auto;
+    padding: 0 20px;
+}
+
+.section {
+    margin-bottom: 70px;
+}
+
+.section h2 {
+    margin-bottom: 20px;
+    font-size: 28px;
+    color: #1e3a8a;
+}
+
+.card {
+    background: white;
+    padding: 30px;
+    border-radius: 14px;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.05);
+}
+
+.services {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 25px;
+}
+
+.service-box {
+    background: #f1f5f9;
+    padding: 25px;
+    border-radius: 12px;
+    transition: 0.3s;
+}
+
+.service-box:hover {
+    transform: translateY(-5px);
+}
+
 footer {
     background: #0f172a;
     color: white;
+    padding: 40px 20px;
     text-align: center;
-    padding: 25px;
-    margin-top: 60px;
 }
-ul {
-    padding-left: 20px;
+
+.footer-links a {
+    color: #93c5fd;
+    text-decoration: none;
 }
+
+@media (max-width: 768px) {
+    .hero h1 { font-size: 32px; }
+}
+
 </style>
 </head>
 <body>
 
-<header>
-    <h1>TOWER CITY LLC</h1>
-    <p>Professional Handyman & House Painting Services</p>
-    <p>Serving Washington State</p>
-</header>
+<nav>
+    <h2>TOWER CITY LLC</h2>
+    <div>
+        <a href="#services">Services</a>
+        <a href="#contact">Contact</a>
+        <a href="terms.html">Terms</a>
+    </div>
+</nav>
+
+<section class="hero">
+    <h1>Professional Handyman & House Painting Services</h1>
+    <p>Serving Lynnwood, Everett, Seattle, Tacoma & surrounding Washington areas</p>
+    <a href="tel:14256961937" class="btn btn-primary">Call (425) 696-1937</a>
+    <a href="sms:14256961937" class="btn btn-secondary">Text Us</a>
+</section>
 
 <div class="container">
 
-    <div class="card">
-        <h2>About the Company</h2>
-        <p>My name is <strong>Ivan Kotok</strong>, owner of TOWER CITY LLC. I provide professional handyman and residential painting services across Washington State. My goal is to deliver high-quality workmanship, reliability, and honest pricing for every project.</p>
+    <div class="section">
+        <h2>About</h2>
+        <div class="card">
+            <p><strong>Ivan Kotok</strong>, owner of TOWER CITY LLC, provides reliable handyman and residential painting services throughout Washington State. We focus on quality workmanship, honest pricing, and dependable service.</p>
+        </div>
     </div>
 
-    <div class="card">
+    <div class="section" id="services">
         <h2>Services</h2>
         <div class="services">
             <div class="service-box">
                 <h3>Interior Painting</h3>
-                <p>Walls, ceilings, trim, doors, and full room repainting.</p>
+                <p>Walls, ceilings, trim, doors and complete room repainting.</p>
             </div>
             <div class="service-box">
                 <h3>Exterior Painting</h3>
-                <p>House exterior repainting and surface preparation.</p>
+                <p>Full exterior repainting and surface preparation.</p>
             </div>
             <div class="service-box">
-                <h3>Handyman Services</h3>
-                <p>Minor repairs, installations, drywall fixes, maintenance work.</p>
+                <h3>Handyman Work</h3>
+                <p>Repairs, drywall fixes, installations and maintenance.</p>
             </div>
         </div>
     </div>
 
-    <div class="card">
+    <div class="section">
         <h2>Service Areas</h2>
-        <ul>
-            <li>Lynnwood</li>
-            <li>Everett</li>
-            <li>Seattle</li>
-            <li>Tacoma</li>
-            <li>And surrounding areas in Washington State</li>
-        </ul>
+        <div class="card">
+            Lynnwood • Everett • Seattle • Tacoma • Surrounding Washington Areas
+        </div>
     </div>
 
-    <div class="card">
+    <div class="section" id="contact">
         <h2>Contact</h2>
-        <p>Email: support@towercityllc.com</p>
-        <p>Business Name: TOWER CITY LLC</p>
-        <a href="terms.html" class="btn">View Terms of Service & Privacy Policy</a>
+        <div class="card">
+            <p><strong>Phone:</strong> (425) 696-1937</p>
+            <p><strong>Email:</strong> support@towercityllc.com</p>
+            <p><strong>Business:</strong> TOWER CITY LLC</p>
+        </div>
     </div>
 
 </div>
 
 <footer>
-    © 2026 TOWER CITY LLC | Washington State
+    © 2026 TOWER CITY LLC | Washington State<br><br>
+    <div class="footer-links">
+        <a href="terms.html">Terms of Service & Privacy Policy</a>
+    </div>
 </footer>
 
 </body>
