--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ footer {
         <h2>Contact</h2>
         <div class="card">
             <p><strong>Phone:</strong> (425) 696-1937</p>
-            <p><strong>Email:</strong> support@towercityllc.com</p>
+            <p><strong>Email:</strong> infotowercityllc@gmail.com</p>
             <p><strong>Business:</strong> TOWER CITY LLC</p>
         </div>
     </div>
