--- a/about.html
+++ b/about.html
@@ -114,8 +114,8 @@
     <p>Email: infotowercityllc@gmail.com</p>
     <br>
     <p>
-      <a href="#">Privacy Policy</a> |
-      <a href="#">Terms & Conditions</a>
+     <a href="privacy-policy.html">Privacy Policy</a> |
+     <a href="terms.html">Terms & Conditions</a>
     </p>
   </div>
 </footer>
