--- a/about.html
+++ b/about.html
@@ -17,12 +17,12 @@
     <nav class="nav-links">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
-      <a href="#">Remodeling</a>
-      <a href="#">Siding</a>
-      <a href="#">Flooring</a>
-      <a href="#">Handyman</a>
-      <a href="#">Projects</a>
-      <a href="#">Contact</a>
+      <a href="remodeling.html">Remodeling</a>
+      <a href="siding.html">Siding</a>
+      <a href="flooring.html">Flooring</a>
+      <a href="handyman.html">Handyman</a>
+      <a href="projects.html">Projects</a>
+      <a href="contact.html">Contact</a>
     </nav>
     <div>
       <a href="tel:14256961937" class="phone-link">(425) 696-1937</a>
