--- a/flooring.html
+++ b/flooring.html
@@ -20,9 +20,9 @@
       <a href="remodeling.html">Remodeling</a>
       <a href="siding.html">Siding</a>
       <a href="flooring.html">Flooring</a>
-      <a href="#">Handyman</a>
-      <a href="#">Projects</a>
-      <a href="#">Contact</a>
+      <a href="handyman.html">Handyman</a>
+      <a href="projects.html">Projects</a>
+      <a href="contact.html">Contact</a>
     </nav>
     <div>
       <a href="tel:14256961937" class="phone-link">(425) 696-1937</a>
