--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
   <div class="container navbar">
     <img src="images/logo.png" alt="TOWER CITY LLC Logo" height="55">
     <nav class="nav-links">
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Remodeling</a>
-      <a href="#">Siding</a>
-      <a href="#">Flooring</a>
-      <a href="#">Handyman</a>
-      <a href="#">Projects</a>
-      <a href="#">Contact</a>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="remodeling.html">Remodeling</a>
+      <a href="siding.html">Siding</a>
+      <a href="flooring.html">Flooring</a>
+      <a href="handyman.html">Handyman</a>
+      <a href="projects.html">Projects</a>
+      <a href="contact.html">Contact</a>
     </nav>
     <div>
       <a href="tel:14256961937" class="phone-link">(425) 696-1937</a>
-      <a href="#estimate" class="btn-primary">FREE Estimate</a>
+      <a href="index.html#estimate" class="btn-primary">FREE Estimate</a>
     </div>
   </div>
 </header>
