--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,13 @@
     <div class="contact-form">
       <form>
         <input type="text" placeholder="Full Name" required>
-        <input type="tel" placeholder="Phone Number" required>
+        <input type="tel" placeholder="Phone Number" required>/
+         <div class="sms-consent">
+    <input type="checkbox" id="smsConsent" name="smsConsent" required>
+    <label for="smsConsent">
+        I agree to receive SMS messages from TOWER CITY LLC regarding my request, service updates, and customer support. Message and data rates may apply. Reply STOP to unsubscribe.
+    </label>
+ </div>
         <input type="email" placeholder="Email Address" required>
         <textarea rows="5" placeholder="Tell us about your project..." required></textarea>
         <button type="submit" class="btn-primary">Request Free Estimate</button>
