--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
       <h3>Request Free Estimate</h3>
       <input type="text" placeholder="Full Name" required>
       <input type="tel" placeholder="Phone Number" required>
+       <div class="sms-consent">
+    <input type="checkbox" id="smsConsent" name="smsConsent" required>
+    <label for="smsConsent">
+        I agree to receive SMS messages from TOWER CITY LLC regarding my request, service updates, and customer support. Message and data rates may apply. Reply STOP to unsubscribe.
+    </label>
+ </div>
       <input type="email" placeholder="Email Address" required>
       <select>
         <option>Kitchen Remodeling</option>
